chore: set up project to firebase

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
   validators: ^3.0.0
   hive_flutter: ^1.1.0
 
+  firebase_core: ^3.2.0
+  cloud_firestore: ^5.1.0
+  firebase_auth: ^5.1.2
+  firebase_storage: ^12.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
