--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   firebase_auth: ^5.1.2
   firebase_storage: ^12.1.1
 
+  uuid: ^4.4.2
+  english_words: ^4.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
