--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,13 +20,15 @@ dependencies:
 
   firebase_core: ^3.2.0
   cloud_firestore: ^5.1.0
-  firebase_auth: ^5.1.2
   firebase_storage: ^12.1.1
 
   uuid: ^4.4.2
   english_words: ^4.0.0
 
   image_picker: ^1.1.2
+
+  google_sign_in: ^6.2.1
+  firebase_auth: ^5.1.2
 
 dev_dependencies:
   flutter_test:
